improve header, change displaying msgs, add envs

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,15 +1,20 @@
-<div class="flex flex-col h-screen">
-  <div class=" py-10  text-center text-3xl font-bold">
-    Black Out Chat
+<!-- dashboard.component.html -->
+<div class="flex flex-col h-[100dvh] bg-(--background) overflow-hidden">
+  <!-- Navbar (np. 60px wysokości) -->
+  <div class="shrink-0">
+    <app-nav />
   </div>
 
+  <!-- Main content: chat (reszta przestrzeni) -->
   <div class="flex flex-1 overflow-hidden">
-    <!-- <div class="w-1/4 m-5" >
+    <!-- Sidebar (opcjonalny) -->
+    <!-- <div class="w-1/4 m-5">
       <app-sidebar />
     </div> -->
+
+    <!-- Chat -->
     <div class="w-full h-full">
       <app-chat />
     </div>
   </div>
-
 </div>
