--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,14 +1,47 @@
-<div class="h-screen w-full flex flex-col items-center">
-  <div class="w-full  py-10 flex justify-center items-center text-3xl font-bold">
-    Black Out Chat
-  </div>
+<div class="h-screen w-full flex flex-col items-center bg-(--background)">
+  <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
+    <div class="w-32"></div>
+    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-4xl font-semibold header tracking-widest">
+      Black Out Chat
+    </h1>
+    <div class="flex items-center gap-4 text-sm lg:text-base w-32 justify-end">
+      <span class="text-gray-300 hidden sm:inline">&nbsp;</span>
+      
+    </div>
+  </header>
+  
 
   <div class="w-1/3 flex-1 flex gap-5 justify-center items-center flex-col">
+    <!-- Username -->
     <label class="flex flex-col text-xl w-full">
       <span>Username</span>
-      <input (keyup.enter)="login()" [(ngModel)]="username"  type="text" class="  py-5 border-b-1  focus:outline-hidden"/>
+      <input
+        [(ngModel)]="username"
+        type="text"
+      
+        class="py-3 focus:outline-none border-b-2 border-darkgray"
+      />
     </label>
-    <button type="submit"  (click)="login()" class=" w-full cursor-pointer bg-gray-900 hover:bg-gray-800 transition-all px-15 py-3 rounded-xl font-bold tracking-widest text-xl">START CHAT</button>
+
+    <!-- Password -->
+    <label class="flex flex-col text-xl w-full">
+      <span>Password</span>
+      <input
+        [(ngModel)]="password"
+        (keyup.enter)="login()"
+        type="password"
+       
+        class='py-3 focus:outline-none border-b-2 border-darkgray'
+      />
+    </label>
+
+    <!-- Przycisk -->
+    <button
+      type="submit"
+      (click)="login()"
+      class="w-full cursor-pointer bg-base-300 hover:bg-gray-900 transition-all px-15 py-3 rounded-xl font-bold tracking-widest text-sm lg:text-xl header"
+    >
+      START CHAT
+    </button>
   </div>
 </div>
-
