--- a/src/app/chat/chat.html
+++ b/src/app/chat/chat.html
@@ -1,5 +1,5 @@
-<div class="w-full h-full flex flex-col justify-between ">
-  <div class="flex gap-5 px-10 flex-col h-50 overflow-scroll flex-1">
+<div class="w-full h-full flex flex-col justify-between">
+  <div class="flex gap-5 px-10 flex-col h-50 overflow-y-scroll flex-1">
     @for(msg of messages; track msg.expiresAt) {
       <app-chat-bubble [msg]="msg"/>
     }
