--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -1,7 +1,17 @@
-<div class="w-full p-5 flex justify-center items-center bg-black text-3xl font-bold">
-  Black Out Chat
-  <div>
-    Hello, anonymous!
-  </div>
-</div>
+<header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
+  <div class="w-64"></div>
+  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest">
+    Black Out Chat
+  </h1>
 
+  <div class="flex items-center gap-4 text-sm lg:text-base w-64 justify-end">
+    <span class="text-gray-300 hidden sm:inline text-bold header tracking-widest">Hi, {{username}}</span>
+    <button (click)="logout()" aria-label="Wyloguj" class="cursor-pointer" >
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:scale-150 transition" fill="none"
+           viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M17 16l4-4m0 0l-4-4m4 4H7" />
+      </svg>
+    </button>
+  </div>
+</header>
