--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,7 +1,7 @@
 <div class="h-screen w-full flex flex-col items-center bg-(--background)">
   <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
     <div class="w-32"></div>
-    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-4xl font-semibold header tracking-widest">
+    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest">
       Black Out Chat
     </h1>
     <div class="flex items-center gap-4 text-sm lg:text-base w-32 justify-end">
@@ -11,7 +11,7 @@
   </header>
   
 
-  <div class="w-1/3 flex-1 flex gap-5 justify-center items-center flex-col">
+  <div class="px-10 md:px-0 w-full md:w-1/3 flex-1 flex gap-5 justify-center items-center flex-col">
     <!-- Username -->
     <label class="flex flex-col text-xl w-full">
       <span>Username</span>
@@ -19,7 +19,10 @@
         [(ngModel)]="username"
         type="text"
       
-        class="py-3 focus:outline-none border-b-2 border-darkgray"
+        [ngClass]="[
+        'py-3 focus:outline-none border-b-2 transition-all',
+        showErrorUsername ? 'border-red-500' : 'border-darkgray focus:border-gray-200'
+      ]"
       />
     </label>
 
@@ -30,8 +33,10 @@
         [(ngModel)]="password"
         (keyup.enter)="login()"
         type="password"
-       
-        class='py-3 focus:outline-none border-b-2 border-darkgray'
+        [ngClass]="[
+        'py-3 focus:outline-none border-b-2 transition-all',
+        showErrorPassword ? 'border-red-500' : 'border-darkgray focus:border-gray-200']"
+        
       />
     </label>
 
