--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,8 +1,8 @@
 <div class="h-screen w-full flex flex-col items-center bg-(--background)">
   <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
     <div class="w-32"></div>
-    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest">
-      Black Out Chat
+    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest glitch-flicker">
+      Blackout Chat
     </h1>
     <div class="flex items-center gap-4 text-sm lg:text-base w-32 justify-end">
       <span class="text-gray-300 hidden sm:inline">&nbsp;</span>
