--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -1,6 +1,6 @@
 <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
   <div class="w-40"></div>
-  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-xl md:text-4xl font-semibold header tracking-widest glitch-flicker">
+  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest glitch-flicker">
     Blackout Chat
   </h1>
 
