--- a/src/app/chat-bubble/chat-bubble.html
+++ b/src/app/chat-bubble/chat-bubble.html
@@ -4,6 +4,6 @@
   <div class="chat-header">
     {{msg.user}}
   </div>
-  <div class="chat-bubble text-lg font-medium max-w-1/3 break-words whitespace-pre-wrap">{{msg.text}}</div>
+  <div class="chat-bubble text-lg font-medium max-full md:max-w-1/3 break-words whitespace-pre-wrap">{{msg.text}}</div>
   <div class="chat-footer opacity-50">{{ getSecondsLeft(msg) }}s</div>
 </div>
