--- a/src/app/input/input.html
+++ b/src/app/input/input.html
@@ -1,5 +1,5 @@
 <div class="w-full border-base-300 flex flex-row px-10 py-5 gap-10">
-  <input [(ngModel)]="message" (keyup.enter)="handleSend()" type="text" class="w-full   px-4 border-b-3 border-base-300 placeholder:text-gray-300 tracking-wider focus:outline-hidden focus:border-base-200 transition-all placeholder:text-gray-500" placeholder="Bb"/>
+  <input [(ngModel)]="message" (keyup.enter)="handleSend()" type="text" class="w-full  px-2 md:px-4 border-b-3 border-base-300 placeholder:text-gray-300 tracking-wider focus:outline-hidden focus:border-base-200 transition-all placeholder:text-gray-500" placeholder="Bb"/>
   <button  (click)="handleSend()" class="cursor-pointer bg-base-300 hover:bg-gray-900 transition-all p-3 font-bold rounded-xl">
     <i class="fas fa-seedling"></i>
     <svg width="25px" height="25px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
