--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,4 @@
-<div class="h-screen w-full flex flex-col items-center bg-(--background)">
+<div class="h-[100dvh] w-full flex flex-col items-center bg-(--background)">
   <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
     <div class="w-8"></div>
     <h1 class="absolute left-1/2 transform -translate-x-1/2 text-xl md:text-4xl font-semibold header tracking-widest glitch-flicker">
