add loader, change favicon

--- a/src/app/chat/chat.html
+++ b/src/app/chat/chat.html
@@ -1,12 +1,23 @@
 <div class="w-full h-full flex flex-col justify-between">
   <div class="flex gap-5 px-10 flex-col h-50 overflow-y-scroll flex-1">
-    @for(msg of messages; track msg.expiresAt) {
-      <app-chat-bubble [msg]="msg" [align]="msg.clientId === this.authService.getClientId() ? 'end' : 'start'"/>
+    @if(!this.isConnected){
+      <div class="w-full h-full flex justify-center items-center">
+
+        <span class="loading loading-dots loading-xl scale-300"></span>
+      </div>
     }
+    @else {
+      @for(msg of messages; track msg.expiresAt) {
+        <app-chat-bubble [msg]="msg" [align]="msg.clientId === this.authService.getClientId() ? 'end' : 'start'"/>
+      }
+    }
+    
     <div #bottom></div>
   </div>
   <div class="w-full">
+    @if(this.isConnected){
     <app-input />
+    }
   </div>
 </div>
 
