--- a/src/app/nav/nav.html
+++ b/src/app/nav/nav.html
@@ -1,10 +1,10 @@
 <header class="relative w-full text-white px-6 py-10 flex items-center justify-between shadow-md">
-  <div class="w-8 md:w-40"></div>
-  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-2xl md:text-4xl font-semibold header tracking-widest glitch-flicker">
+  <div class="w-4 md:w-40"></div>
+  <h1 class="absolute left-1/2 transform -translate-x-1/2 text-xl sm:text-2xl md:text-4xl font-semibold header tracking-widest glitch-flicker text-center">
     Blackout Chat
   </h1>
 
-  <div class="flex items-center gap-4 text-sm lg:text-base w-8 md:w-40 justify-end">
+  <div class="flex items-center gap-4 text-sm lg:text-base w-4 md:w-40 justify-end">
     <span class="text-gray-300 hidden md:inline text-bold header tracking-widest">Hi, {{username}}</span>
     <button (click)="logout()" aria-label="Wyloguj" class="cursor-pointer" >
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:scale-150 transition" fill="none"
